Put in test projects and 3 sample tests

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Humour.Mvc\packages.config" />
+  <repository path="..\Humour.Tests.Mvc\packages.config" />
 </repositories>
