--- a/Humour.Model/Humour.Model.csproj
+++ b/Humour.Model/Humour.Model.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Story.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Humour.Infrastructure\Humour.Infrastructure.csproj">
