--- a/Humour.Respository/Humour.Respository.csproj
+++ b/Humour.Respository/Humour.Respository.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoryRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Humour.Infrastructure\Humour.Infrastructure.csproj">
