--- a/Humour.Model/Humour.Model.csproj
+++ b/Humour.Model/Humour.Model.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\CollectionBase.cs" />
+    <Compile Include="Collections\Votes.cs" />
+    <Compile Include="IHasOwner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Story.cs" />
     <Compile Include="StoryType.cs" />
