--- a/Humour.Model/Humour.Model.csproj
+++ b/Humour.Model/Humour.Model.csproj
@@ -41,9 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\CollectionBase.cs" />
+    <Compile Include="Collections\Stories.cs" />
+    <Compile Include="Collections\StoryComparer.cs" />
     <Compile Include="Collections\Votes.cs" />
+    <Compile Include="IDateTracking.cs" />
     <Compile Include="IHasOwner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\StoryRepository.cs" />
     <Compile Include="Story.cs" />
     <Compile Include="StoryType.cs" />
     <Compile Include="Vote.cs" />
