Adding a DataContext factory.  Property and Object level validations of the model and collections.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Humour.Mvc\packages.config" />
+  <repository path="..\Humour.Respository\packages.config" />
   <repository path="..\Humour.Tests.Integration\packages.config" />
   <repository path="..\Humour.Tests.Mvc\packages.config" />
   <repository path="..\Humour.Tests.Unit\packages.config" />
