--- a/Humour.Infrastructure/Humour.Infrastructure.csproj
+++ b/Humour.Infrastructure/Humour.Infrastructure.csproj
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContextStorage\DataContextStorageFactory.cs" />
+    <Compile Include="DataContextStorage\HttpDataContextStorageContainer.cs" />
+    <Compile Include="DataContextStorage\IDataContextStorageContainer.cs" />
+    <Compile Include="DataContextStorage\ThreadDataContextStorageContainer.cs" />
     <Compile Include="DomainEntity.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
