Adding in UoW and Repos.  ContextInitialiser to handle dev and prod dbs

--- a/Humour.Mvc/Web.config
+++ b/Humour.Mvc/Web.config
@@ -72,6 +72,12 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="Humour.Repository.HumourContext, Humour.Repository" disableDatabaseInitialization="false">
+        <databaseInitializer type="Humour.Repository.MyDropCreateDatabaseIfModelChanges, Humour.Repository" />
+      </context>
+    </contexts>
+    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
