--- a/Humour.Infrastructure/Humour.Infrastructure.csproj
+++ b/Humour.Infrastructure/Humour.Infrastructure.csproj
@@ -47,6 +47,8 @@
     <Compile Include="DataContextStorage\ThreadDataContextStorageContainer.cs" />
     <Compile Include="DomainEntity.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="IUnitOfWorkFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
