--- a/Humour.Respository/Humour.Respository.csproj
+++ b/Humour.Respository/Humour.Respository.csproj
@@ -48,8 +48,13 @@
   <ItemGroup>
     <Compile Include="Configuration\StoryConfiguration.cs" />
     <Compile Include="DataContextFactory.cs" />
+    <Compile Include="EFUnitOfWork.cs" />
+    <Compile Include="EFUnitOfWorkFactory.cs" />
+    <Compile Include="HumourContextInitialiser.cs" />
+    <Compile Include="MyDropCreateDatabaseIfModelChanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HumourContext.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="StoryRepository.cs" />
   </ItemGroup>
   <ItemGroup>
