--- a/Humour.Tests.Integration/Humour.Tests.Integration.csproj
+++ b/Humour.Tests.Integration/Humour.Tests.Integration.csproj
@@ -63,7 +63,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="HumourContextTests.cs" />
+    <Compile Include="IntegrationTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleStoryTests.cs" />
     <Compile Include="StoryRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
