--- a/Humour.Infrastructure/Humour.Infrastructure.csproj
+++ b/Humour.Infrastructure/Humour.Infrastructure.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="IUnitOfWorkFactory.cs" />
+    <Compile Include="ModelValidationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
