--- a/Humour.Mvc/Humour.Mvc.csproj
+++ b/Humour.Mvc/Humour.Mvc.csproj
@@ -280,6 +280,7 @@
     <Content Include="Views\Story\Index.cshtml" />
     <Content Include="Views\Story\Create.cshtml" />
     <Content Include="Views\Story\Edit.cshtml" />
+    <Content Include="Views\Story\_CreateOrEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
