Updated notes.  Repository tests.  Updated UI

--- a/Humour.Tests.Integration/packages.config
+++ b/Humour.Tests.Integration/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="FluentAssertions" version="2.2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
 </packages>
