--- a/Humour.Mvc/Web.config
+++ b/Humour.Mvc/Web.config
@@ -10,7 +10,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Humour.Mvc-20140219062329.mdf;Initial Catalog=aspnet-Humour.Mvc-20140219062329;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="Humour" connectionString="Data Source=.\SQL2012;Initial Catalog=Humour;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="Humour" connectionString="Data Source=.\SQL2012;Initial Catalog=Humour;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="Humour" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Humour;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
